--- a/Lecture_02_Pandas_Covid_Analysis_Questions.ipynb
+++ b/Lecture_02_Pandas_Covid_Analysis_Questions.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -349,13 +349,13 @@
        "[3566 rows x 14 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('05-30-2020.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_daily_reports/05-30-2020.csv')\n",
     "df"
    ]
   },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "4                Adair, Iowa, US      125.838926             0.000000  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -8156,7 +8156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -15127,7 +15127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -22099,7 +22099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22109,7 +22109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -23014,7 +23014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
